--- a/package.json
+++ b/package.json
@@ -9,20 +9,24 @@
     "server:dev": "JWT=JWT node --watch server",
     "server:dev:windows": "set JWT=JWT && node --watch server",
     "build": "vite build client",
-    "server": "nodemon server"
+    "server": "nodemon server",
+    "test":"jest --verbose"
   },
   "author": "Fullstack Academy of Code",
   "license": "ISC",
   "devDependencies": {
     "@faker-js/faker": "^8.0.2",
+    "@testing-library/react": "^14.0.0",
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^4.0.0",
-    "prisma": "^5.4.2",
+    "jest": "^29.7.0",
+    "prisma": "^5.5.2",
+    "supertest": "^6.3.3",
     "vite": "^4.3.9"
   },
   "dependencies": {
-    "@prisma/client": "^5.4.2",
+    "@prisma/client": "^5.5.2",
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.5.1",
     "bcrypt": "^5.1.1",
